--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- index.html -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Sarabun:wght@100;200;300;400;500;600;700;800&display=swap"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nuvix</title>
-
   </head>
   <body>
     <div id="root"></div>
